--- a/Threejs-Practice/render3d.html
+++ b/Threejs-Practice/render3d.html
@@ -51,13 +51,13 @@
 
 				const gridHelper = new THREE.GridHelper( 400, 40, 0x0000ff, 0x808080 );
 				gridHelper.position.y = - 150;
-				gridHelper.position.x = - 150;
+				gridHelper.position.x = 10;
 				scene.add( gridHelper );
 
-				const polarGridHelper = new THREE.PolarGridHelper( 200, 16, 8, 64, 0x0000ff, 0x808080 );
-				polarGridHelper.position.y = - 150;
-				polarGridHelper.position.x = 300;
-				scene.add( polarGridHelper );
+// 				const polarGridHelper = new THREE.PolarGridHelper( 200, 16, 8, 64, 0x0000ff, 0x808080 );
+// 				polarGridHelper.position.y = - 150;
+// 				polarGridHelper.position.x = 300;
+// 				scene.add( polarGridHelper );
 
 				const loader = new GLTFLoader();
 				loader.load( 'models/gltf/LeePerrySmith/LeePerrySmith.glb', function ( gltf ) {
@@ -108,8 +108,6 @@
 
 
 				} );
-
-				//
 
 				window.addEventListener( 'resize', onWindowResize );
 
