--- a/Threejs-Practice/render3d.html
+++ b/Threejs-Practice/render3d.html
@@ -92,12 +92,12 @@
 					// group.add( line );
 					// scene.add( new THREE.BoxHelper( line ) );
 
-					const edges = new THREE.EdgesGeometry( mesh.geometry );
-					line = new THREE.LineSegments( edges );
-					line.material.depthTest = false;
-					line.material.opacity = 0.25;
-					line.material.transparent = true;
-					line.position.x = - 4;
+// 					const edges = new THREE.EdgesGeometry( mesh.geometry );
+// 					line = new THREE.LineSegments( edges );
+// 					line.material.depthTest = false;
+// 					line.material.opacity = 0.25;
+// 					line.material.transparent = true;
+// 					line.position.x = - 4;
 
 					
 					// group.add( line );
